--- a/package.json
+++ b/package.json
@@ -8,17 +8,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/ubuntu": "^0.1.0",
+    "@unform/core": "^2.1.6",
+    "@unform/mobile": "^2.1.6",
     "expo": "~41.0.1",
+    "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-material-ripple": "^0.9.1",
+    "react-native-svg": "12.1.0",
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.3.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/styled-components": "^5.1.9",
+    "react-native-svg-transformer": "^0.14.3",
     "typescript": "~4.0.0"
   },
   "private": true
