--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "expo": "~41.0.1",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-material-ripple": "^0.9.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.2.0",
@@ -30,9 +31,10 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-material-ripple": "^0.9.1",
     "@types/styled-components": "5.1.6",
     "react-native-svg-transformer": "^0.14.3",
     "typescript": "~4.0.0"
