--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-collapsible": "^1.6.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-material-ripple": "^0.9.1",
     "react-native-reanimated": "~2.1.0",
