--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-native-svg-charts": "^5.0.7",
     "@unform/core": "^2.1.6",
     "@unform/mobile": "^2.1.6",
+    "d3-shape": "^3.0.1",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
