--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-native-material-ripple": "^0.9.1",
-    "@types/styled-components": "5.1.6",
+    "@types/styled-components": "^5.1.11",
+    "@types/styled-components-react-native": "^5.1.1",
     "react-native-svg-transformer": "^0.14.3",
     "typescript": "~4.0.0"
   },
