--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-collapsible": "^1.6.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-masked-text": "^1.13.0",
