--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
+    "expo-linear-gradient": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-chart-kit": "^6.11.0",
     "react-native-collapsible": "^1.6.0",
     "react-native-gesture-handler": "~1.10.2",
