--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/material-top-tabs": "^5.3.19",
     "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
+    "@react-navigation/stack": "5.10.0",
     "@types/react-native-svg-charts": "^5.0.7",
     "@unform/core": "^2.1.6",
     "@unform/mobile": "^2.1.6",
@@ -32,12 +33,15 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-masked-text": "^1.13.0",
     "react-native-material-ripple": "^0.9.1",
+    "react-native-pager-view": "5.0.12",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~2.1.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
     "react-native-svg-charts": "^5.4.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.0",
     "yup": "^0.32.9"
