--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/ubuntu": "^0.1.0",
+    "@expo/ngrok": "4.1.0",
+    "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.11",
@@ -18,6 +20,7 @@
     "@types/react-native-svg-charts": "^5.0.7",
     "@unform/core": "^2.1.6",
     "@unform/mobile": "^2.1.6",
+    "axios": "^0.24.0",
     "d3-shape": "^3.0.1",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
