--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-chart-kit": "^6.11.0",
     "react-native-collapsible": "^1.6.0",
+    "react-native-flash-message": "^0.2.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-masked-text": "^1.13.0",
     "react-native-material-ripple": "^0.9.1",
